# cuda-cpp-cmake

./: CMakeLists.txt  README.md  kernel.cu  kernel.h  main.cpp
